# ai-terminal

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  readme.md  todo.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  index.html  production-readiness.md  setup.md  troubleshooting.md
docs/privacy/: index.html
docs/security/: final-release-checklist.md  incident-response.md  macos-entitlements-checklist.md  threat-model.md  website-headers.md
docs/terms/: index.html
e2e/: app.spec.ts
scripts/: build-signed-local.sh  generate-icons.sh  notarize-local-interactive.sh  notarize-local.sh  serve-docs.mjs  version-bump.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: external.rs  keychain.rs  lib.rs  logger.rs  main.rs  pty.rs
src/__tests__/: setup.ts
src/__tests__/__mocks__/: tauri-core.ts  tauri.ts
src/__tests__/agent/: context.test.ts  planner.test.ts  state-machine.test.ts
src/__tests__/analytics/: metrics.test.ts
src/__tests__/bookmarks/: manager.test.ts
src/__tests__/collaboration/: manager.test.ts
src/__tests__/components/: GlobalPalette.test.tsx  GoalInput.test.tsx  MetricsPanel.test.tsx  StatusBar.test.tsx  ThemeToggle.test.tsx
src/hooks/: useAgent.ts  useSettings.ts  useTerminal.ts  useTheme.ts
src/lib/agent/: context.ts  (+4 more)
src/types/: index.ts
(+84 files in other folders)
